--- a/second.html
+++ b/second.html
@@ -72,8 +72,22 @@
 </table>
 
 
+<table>
+    <tr>
+        <th>Calories</th>
+        <th>Fat	Protein</th>
+        <th>Carbonies</th>
+    </tr>
+    <tr>
+        <td>630</td>
+        <td>630</td>
+        <td>630</td>
+    </tr>
+</table>
+
+
 <footer>
-    <p>&#169; 2024 Recipe Website. All rights reserved.</p>
+    <p>&copy; 2024 Recipe Website. All rights reserved.</p>
 </footer>
 </body>
 </html>
